DOM Manipulated Content

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <label for="#create_post">Create</label>
                     <div class="profile_picture">
                         <img src="./images/profile-1.jpg" alt="">
-                        <!-- <p>Lorem ipsum dolor sit amet.</p> -->
+                        <p>Lorem ipsum dolor sit amet.</p>
                     </div>
                 </div>
             </div>
