DOM Contents Added

--- a/index.html
+++ b/index.html
@@ -25,13 +25,239 @@
                     />
                 </div>
                 <div class="create">
-                    <label for="#create_post">Create</label>
+                    <label class="btn btn-primary" for="#create_post"
+                        >Create</label
+                    >
                     <div class="profile_picture">
-                        <img src="./images/profile-1.jpg" alt="">
-                        <!-- <p>Lorem ipsum dolor sit amet.</p> -->
+                        <img src="./images/profile-1.jpg" alt="" />
                     </div>
                 </div>
             </div>
         </nav>
+
+        <!----------------------- END OF NAV ------------------------->
+
+        <main>
+            <div class="container">
+                <!----------------------------- LEFT ------------------->
+                <div class="left">
+                    <a class="profile">
+                        <div class="profile_picture">
+                            <img src="./images/profile-1.jpg" alt="" />
+                        </div>
+                        <div class="handle">
+                            <h4>Diane Ayi</h4>
+                            <p class="text-muted">@dayi</p>
+                        </div>
+                    </a>
+
+                    <!--=================== SIDEBAR ===================-->
+                    <div class="sidebar">
+                        <a href="" class="menu_item active">
+                            <span><i class="fa fa-home"></i></span>
+                            <h3>Home</h3>
+                        </a>
+                        <a href="" class="menu_item">
+                            <span><i class="fa fa-compass"></i></span>
+                            <h3>Explore</h3>
+                        </a>
+                        <a href="" class="menu_item" id="notifications">
+                            <span>
+                                <i class="fa fa-bell">
+                                    <small class="notification_count">
+                                        9+
+                                    </small>
+                                </i>
+                            </span>
+                            <h3>Notifications</h3>
+
+                            <!-- ============ NOTIFICATION POPUP ===========-->
+                            <div class="notification_popup">
+                                <div>
+                                    <div class="profile_picture">
+                                        <img
+                                            src="./images/profile-2.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="notification_body">
+                                        <b>Keke Benjamin</b> accepted your
+                                        friend request
+                                        <small class="text-muted">
+                                            2 DAYS AGO
+                                        </small>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="profile_picture">
+                                        <img
+                                            src="./images/profile-3.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="notification_body">
+                                        <b>Ayivo Mensah</b> commented on your
+                                        post
+                                        <small class="text-muted">
+                                            1 HOUR AGO
+                                        </small>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="profile_picture">
+                                        <img
+                                            src="./images/profile-4.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="notification_body">
+                                        <b>Mary Claira</b> and
+                                        <b>238 others</b> liked your post
+                                        <small class="text-muted">
+                                            4 MINUTES AGO
+                                        </small>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="profile_picture">
+                                        <img
+                                            src="./images/profile-5.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="notification_body">
+                                        <b>Jennifer Weimer</b> commented on a
+                                        post you're tagged in
+                                        <small class="text-muted">
+                                            2 DAYS AGO
+                                        </small>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="profile_picture">
+                                        <img
+                                            src="./images/profile-6.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="notification_body">
+                                        <b>Juliana Dean</b> commented on your
+                                        post
+                                        <small class="text-muted">
+                                            1 HOUR AG0
+                                        </small>
+                                    </div>
+                                </div>
+                                <div>
+                                    <div class="profile_picture">
+                                        <img
+                                            src="./images/profile-7.jpg"
+                                            alt=""
+                                        />
+                                    </div>
+                                    <div class="notification_body">
+                                        <b>Savi Redmond</b> commented on your
+                                        post
+                                        <small class="text-muted">
+                                            2 HOURS AGO
+                                        </small>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--================ END NOTIFICATION POPUP ================-->
+                        </a>
+                        <a href="" class="menu_item" id="messages_notifications">
+                            <span><i class="fa fa-commenting"><small class="notification_count">6</small></i></span>
+                            <h3>Messages</h3>
+                        </a>
+                        <a href="" class="menu_item"
+                            ><span><i class="fa fa-bookmark"></i></span>
+                            <h3>Bookmarks</h3>
+                        </a>
+                        <a href="" class="menu_item"
+                            ><span><i class="fa fa-line-chart"></i></span>
+                            <h3>Analytics</h3>
+                        </a>
+                        <a href="" class="menu_item"
+                            ><span><i class="fa fa-tint"></i></span>
+                            <h3>Theme</h3>
+                        </a>
+                        <a href="" class="menu_item"
+                            ><span><i class="fa fa-cog"></i></span>
+                            <h3>Settings</h3>
+                        </a>
+                    </div>
+
+                    <!--================ END OF SIDEBAR ================-->
+
+                    <label for="create_post" class="btn btn-primary"
+                        >Create Post</label
+                    >
+                </div>
+                <!----------------------------- MIDDLE ------------------->
+
+                <div class="middle">
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Quod neque veniam nisi omnis error facere modi
+                        voluptatibus minus officiis, saepe tenetur repellendus
+                        dolore officia impedit deserunt facilis eveniet
+                        temporibus sequi alias laborum esse nostrum doloribus
+                        qui id. Beatae animi quod sint repellat, soluta sequi
+                        fugiat similique in laudantium qui vitae. Eum possimus
+                        itaque ducimus repudiandae. Est quasi, adipisci officia
+                        doloribus molestias, quos, temporibus ipsum vero ipsam
+                        voluptatum minima nihil! Voluptatem velit esse sequi
+                        assumenda omnis ab earum dignissimos dolore non aliquam
+                        voluptatum ex doloribus nisi quibusdam tempora
+                        laudantium alias eum optio ipsam, officia mollitia iure
+                        voluptas deserunt asperiores. Hic consequuntur aperiam
+                        tempora debitis saepe, obcaecati officiis dolorem
+                        ratione id modi omnis possimus maiores perferendis
+                        doloremque? Velit alias exercitationem, quod ea sunt
+                        doloremque quia veniam! Autem libero amet doloremque
+                        rerum repellendus cumque quae ea impedit nobis, atque,
+                        eos, quidem veritatis facilis perspiciatis debitis.
+                        Architecto commodi deserunt sint eum delectus voluptate
+                        ab omnis quisquam labore similique doloribus quibusdam
+                        dicta dolorum cupiditate dignissimos nostrum nesciunt
+                        ipsum sunt ratione repellendus dolore quae, ut corrupti
+                        iure. Impedit totam voluptate facere sapiente aliquid,
+                        aliquam assumenda laborum et! Recusandae quae, minima
+                        illum odit quas laboriosam reprehenderit sunt impedit
+                        neque perspiciatis rerum eveniet nihil fugit aperiam
+                        iure at!
+                    </p>
+                </div>
+                <!----------------------------- RIGHT ------------------->
+
+                <div class="right">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Ipsa rem necessitatibus accusamus magni deleniti, dolor
+                        voluptatibus maxime rerum commodi reprehenderit nesciunt
+                        obcaecati nobis nemo sunt eaque explicabo harum
+                        consectetur dolores ullam perferendis quis, ducimus ex
+                        officiis iste. Quam explicabo autem ipsum tenetur ad. Ea
+                        voluptatem dolore nemo, doloremque ad accusamus vero
+                        velit eos recusandae quod fugit inventore ut sapiente
+                        nostrum, perferendis cum dolores facilis tenetur sunt
+                        porro eius laborum iste omnis consequatur. Dolorem
+                        asperiores, consectetur aut ad corrupti aperiam ea animi
+                        enim maxime omnis iste quas voluptas beatae voluptatum
+                        modi amet? Tempore odio ullam temporibus odit sapiente
+                        at molestiae tenetur reprehenderit? Cumque molestiae
+                        placeat inventore tenetur exercitationem illum nemo
+                        eligendi commodi ipsam ullam! Omnis hic assumenda quidem
+                        perspiciatis ullam cum magnam architecto nemo quis modi
+                        esse similique culpa nihil alias iste aliquid qui sunt,
+                        aut exercitationem id ea explicabo suscipit temporibus
+                        quibusdam! Possimus temporibus libero, aperiam dolores
+                        in fugit incidunt.
+                    </p>
+                </div>
+            </div>
+        </main>
     </body>
 </html>
