--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
         <div class="customize_theme">
             <div class="card">
                 <h2>Customize your view</h2>
-                <p class="text-muted">Manage your font size, color and background</p>
+                <p class="text-muted">Manage your font sizes, color and background</p>
 
                 <!------------ FONT SIZES ------------>
                 <div class="font_size">
