DOM Manipulated Contents

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         <a class="menu_item" id="messages_notifications">
                             <span
                                 ><i class="fa fa-commenting"
-                                    ><small class="notification_count"
+                                    ><small class="messages_notification_count"
                                         ><em>6</em></small
                                     ></i
                                 ></span
