--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                             </div>
                             <div class="message_body">
                                 <h5>Damon Clark</h5>
-                                <p class="text-muted">Just woke up bruh</p>
+                                <p class="text-muted">Just woke up bruv</p>
                             </div>
                         </div>
                         <div class="message">
