--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                 </div>
                 <!--===================== END OF MIDDLE =====================-->
 
-                <!----------------------------- RIGHT ------------------->
+                <!----------------------------- RIGHT -------------------->
 
                 <div class="right">
                    <div class="messages">
