--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                             ><span><i class="fa fa-line-chart"></i></span>
                             <h3>Analytics</h3>
                         </a>
-                        <a class="menu_item"
+                        <a class="menu_item" id="theme"
                             ><span><i class="fa fa-tint"></i></span>
                             <h3>Theme</h3>
                         </a>
@@ -806,6 +806,7 @@
                 <div class="background">
                     <h4>Background</h4>
                     <div class="choose_bg">
+                    
                         <div class="bg_1 active">
                             <span></span>
                             <h5 for="bg_1">Light</h5>
