More Structural Content In Place

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                     <!--=================== SIDEBAR ===================-->
                     <div class="sidebar">
-                        <a class="menu_item active">
+                        <a class="menu_item active" href="#">
                             <span><i class="fa fa-home"></i></span>
                             <h3>Home</h3>
                         </a>
@@ -813,11 +813,11 @@
                         </div>
                         <div class="bg_2">
                             <span></span>
-                            <h5 for="bg_1">Dim</h5>
+                            <h5 for="bg_2">Dim</h5>
                         </div>
                         <div class="bg_3">
                             <span></span>
-                            <h5 for="bg_1">Lights Out</h5>
+                            <h5 for="bg_3">Lights Out</h5>
                         </div>
                         
                     </div>
